fixed email overflow

--- a/app/stylesheets/partials/_mobile.sass
+++ b/app/stylesheets/partials/_mobile.sass
@@ -94,14 +94,41 @@ body
   margin-bottom: -30px
   padding-bottom: 40px
   background: url(images/custom-profile-background.png)
+  .type
+    width: 26%
+    font-size: 120%
+    font-weight: bold
+    color: #3964a9
+    margin-top: 5px
+    float: left
+    text-align: right
+  .data
+    width: 70%
+    margin-top: 5px
+    float: left
+    text-align: left
+    font-size: 120%
+    padding-left: 3px
+    word-wrap: break-word
+    a
+      color: #ec701a
+
   table
     margin: 0 auto
     width: 90%
+    table-layout:fixed
+    display: block
+    word-wrap: break-word
     td:first-child
-      width: 65px
+      width: 33%
+      display: block
+      float: left
       font-weight: bold
       color: #3964a9
     td
+      display: block
+      width: 66%
+      float: left
       font-size: 120%
       a
         color: #ec701a
